--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.1.4'
     implementation 'org.liquibase:liquibase-core:4.7.1'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
